--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,12 @@ a {
 
 @media (max-width: 820px) {
   #main-banner nav {
+    position: absolute;
+    left: 0;
+    top: 60px;
+    background: black;
+    padding: 30px;
+    right: 0;
     display: none;
   }
 }
@@ -94,6 +100,13 @@ a {
   display: flex;
   align-items: center;
   height: 100%;
+}
+@media (max-width: 820px) {
+  #main-banner .nav-container-navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 #main-banner .nav-container-navbar li {
   margin: 5px 10px;
@@ -133,7 +146,14 @@ a {
   }
 }
 #main-banner .title-container h1 {
+  font-size: 3.3rem;
   margin-top: 1rem;
+  text-align: center;
+}
+@media (max-width: 820px) {
+  #main-banner .title-container h1 {
+    font-size: 2rem;
+  }
 }
 
 .services-container {
